Add dashboard on home page